--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.7.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
@@ -28,6 +29,7 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^3.23.8"
   }
 }
