--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.7.4",
     "@types/nodemailer": "^6.4.16",
+    "@types/socket.io": "^3.0.2",
     "@types/swagger-ui-express": "^4.1.6",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
@@ -33,6 +34,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "nodemailer": "^6.9.15",
+    "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
     "zod": "^3.23.8"
   }
